[package]
name = "ping-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = {version="^1.4", features=["fltk-bundled"]}
fltk-evented = { version = "0.5", features = ["tokio"] }
winapi = { package = "winapi_forked_icmpapi", version = "0.3.7", features = ["errhandlingapi", "icmpapi", "iphlpapi", "impl-default", "handleapi", "synchapi", "winbase", "winerror", "wincon"] }
tokio = {version="*", features=["rt","macros", "rt-multi-thread","time"]}
